# spark

./: local.yml  pyproject.toml
group_vars/: all
roles/base/tasks/: packages.yml  user.yml
roles/base/templates/: override.j2
roles/bitwarden/tasks/: main.yml
roles/bluetooth/files/: phonesim.conf  phonesim.service
roles/bluetooth/tasks/: main.yml
roles/browsers/tasks/: main.yml
roles/clipboard/tasks/: main.yml
roles/development/tasks/: docker.yml  kvm.yml  main.yml
roles/discord/tasks/: main.yml
roles/dotfiles_stow/tasks/: main.yml
roles/editors/meta/: main.yml
roles/gnupg/handlers/: main.yml
roles/gnupg/tasks/: main.yml
roles/localtime/tasks/: main.yml
roles/media/meta/: main.yml
roles/microcode/tasks/: main.yml
roles/mirrorlist/tasks/: main.yml
roles/pdf/tasks/: main.yml
roles/pkgfile/tasks/: main.yml
roles/ssd/tasks/: main.yml
roles/sway/tasks/: main.yml
roles/unbound/tasks/: main.yml
roles/wayland/tasks/: main.yml
roles/wicd/files/: peap-mschap2
roles/wicd/tasks/: main.yml
roles/yubikey/tasks/: main.yml
roles/yubikey/vars/: main.yml
